# docnote

./: .gitignore  README.md  TODO.md  app.js  app.py  database.py  features.md  index.html  main.py  models.py  pyproject.toml  requirements.txt  schemas.py
designs/: medbridge_design.html
routes/: __init__.py  ai.py  analytics.py  patients.py  sessions.py
static/: deft_terms.json
static/css/: style.css
static/js/: app.js
templates/: index.html  suite.html
